--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "dotenv": "^16.0.1",
     "expo": "~46.0.6",
+    "expo-constants": "~13.2.3",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.9.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
